5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3135/executions/1582_1334.log
== TEST (2019-03-12 17:46:11) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 8/1)

print("Resto: ", 8%1)

print("Potenciacao: ", 8**1)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:46:22) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 8/1)

print("Resto: ", 8%0)

print("Potenciacao: ", 8**1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print("Resto: ", 8%0)
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:46:31) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 8/1)

print("Resto: ",  8% 0)

print("Potenciacao: ", 8**1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print("Resto: ",  8% 0)
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:46:36) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 8/1)

print("Resto: ",  8% 2)

print("Potenciacao: ", 8**1)
-- EXECUTION TIME:
0.142584
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  0
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:46:37) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 8/1)

print("Resto: ",  8% 2)

print("Potenciacao: ", 8**1)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:46:59) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 8/1)

print("Resto: ",  160%4)

print("Potenciacao: ", 8**1)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:47:05) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 8/1)

print("Resto: ",  160%3)

print("Potenciacao: ", 8**1)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  1
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:47:10) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 8/1)

print("Resto: ",  160%)

print("Potenciacao: ", 8**1)
-- EXECUTION TIME:
0.129902
-- ERROR:
  File "/home/codebench/codes/1582/1334/main.py", line 9
    print("Resto: ",  160%)
                          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:47:14) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 8/1)

print("Resto: ",  160%8)

print("Potenciacao: ", 8**1)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:47:20) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 8/1)

print("Resto: ",  160%9)

print("Potenciacao: ", 8**1)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  7
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:47:27) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 8/1)

print("Resto: ",  160%11)

print("Potenciacao: ", 8**1)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  6
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:47:31) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 8/1)

print("Resto: ",  160%10)

print("Potenciacao: ", 8**1)
-- EXECUTION TIME:
0.151972
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  0
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:47:32) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 8/1)

print("Resto: ",  160%10)

print("Potenciacao: ", 8**1)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 12:27:42) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 8/1)

print("Resto: ",  746%6)

print("Potenciacao: ", 8**1)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  2
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 12:28:25) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 8/1)

print("Resto: ",  89%9)

print("Potenciacao: ", 8**1)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 12:28:28) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 8/1)

print("Resto: ",  89%9)

print("Potenciacao: ", 8**1)
-- EXECUTION TIME:
0.182697
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
